# bheembhai

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  launch_claude.sh  launch_codex.sh  pyproject.toml
.agents/skills/: README.md  _SHARED-project-layout.md
.claude/: settings.json
.codex/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/approvals/: __init__.py
app/auth/: __init__.py  repository.py  router.py  service.py  tokens.py
app/cli/: __init__.py  admin_handler.py
app/config/: __init__.py  router.py
app/core/: __init__.py  daemon.py  database.py  db.py  logging.py  settings.py
app/executor/: __init__.py  main.py
app/integrations/: __init__.py  router.py
app/notifications/: __init__.py  email.py  router.py
app/object_storage/: __init__.py  service.py
app/projects/: __init__.py  repository.py  router.py  service.py
app/runs/: __init__.py  router.py
app/secure_storage/: __init__.py  encryption.py  minio_service.py  service.py
app/web/: __init__.py  router.py
app/worker/: __init__.py  main.py
docs/: BeemBhai-Whitepaper.md  CHANGELOG-design.md  architecture.md  data-model.md  environment.md  tech-stack.md  testing-strategy.md  ui-conventions.md
docs/adr/: ADR-001-python-fastapi-backend.md  ADR-002-server-rendered-jinja2-bootstrap-ui.md  (+7 more)
migrations/: env.py
scripts/: dev-down.sh  dev-rebuild.sh  dev-up.sh  jira_mcp.sh
tests/: compose_stack.py  conftest.py
(+177 files in other folders)
